# PawApi/Controllers/DTOs/UsuarioDto.cs
@@ -8,6 +8,7 @@ namespace PawApi.Controllers.DTOs
     public class UsuarioDto
     {
         public int Id { get; set; }
+        public string Usuario1 { get; set; }
         public string Correo { get; set; }
         public string Legajo { get; set; }
         public DateTime? FechaDeCreacion { get; set; }
